# sequences-rs

./: .gitignore  Cargo.toml  readme.md  release.sh  sequences_template.rb
Formula/: sequences-rs.rb
src/: app.rs  config.rs  history.rs  main.rs  ui.rs
src/sequences/: arithmetic.rs  fibonacci.rs  geometric.rs  mod.rs  quadratic.rs  special.rs
